// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Compact Button 1`] = `
<Button
  compact={true}
  dense={false}
  disabled={false}
  raised={false}
  ripple={true}
  stroked={false}
  unelevated={false}
>
  <Ripple
    disabled={false}
    render={[Function]}
  >
    <button
      className="mdc-button mdc-ripple-upgraded mdc-button--compact"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "--mdc-ripple-fg-scale": "Infinity",
          "--mdc-ripple-fg-size": "0px",
          "--mdc-ripple-left": "0px",
          "--mdc-ripple-top": "0px",
        }
      }
    >
      Button
    </button>
  </Ripple>
</Button>
`;

exports[`Button Dense Button 1`] = `
<Button
  compact={false}
  dense={true}
  disabled={false}
  raised={false}
  ripple={true}
  stroked={false}
  unelevated={false}
>
  <Ripple
    disabled={false}
    render={[Function]}
  >
    <button
      className="mdc-button mdc-ripple-upgraded mdc-button--dense"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "--mdc-ripple-fg-scale": "Infinity",
          "--mdc-ripple-fg-size": "0px",
          "--mdc-ripple-left": "0px",
          "--mdc-ripple-top": "0px",
        }
      }
    >
      Button
    </button>
  </Ripple>
</Button>
`;

exports[`Button Disabled Button 1`] = `
<Button
  compact={false}
  dense={false}
  disabled={true}
  raised={false}
  ripple={true}
  stroked={false}
  unelevated={false}
>
  <Ripple
    disabled={true}
    render={[Function]}
  >
    <button
      className="mdc-button mdc-ripple-upgraded"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "--mdc-ripple-fg-scale": "Infinity",
          "--mdc-ripple-fg-size": "0px",
          "--mdc-ripple-left": "0px",
          "--mdc-ripple-top": "0px",
        }
      }
    >
      Button
    </button>
  </Ripple>
</Button>
`;

exports[`Button Icon Button 1`] = `
<Button
  compact={false}
  dense={false}
  disabled={false}
  icon="favorite"
  raised={false}
  ripple={true}
  stroked={false}
  unelevated={false}
>
  <Ripple
    disabled={false}
    render={[Function]}
  >
    <button
      className="mdc-button mdc-ripple-upgraded"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "--mdc-ripple-fg-scale": "Infinity",
          "--mdc-ripple-fg-size": "0px",
          "--mdc-ripple-left": "0px",
          "--mdc-ripple-top": "0px",
        }
      }
    >
      <i
        className="material-icons mdc-button__icon"
      >
        favorite
      </i>
      Button
    </button>
  </Ripple>
</Button>
`;

exports[`Button Raised Button 1`] = `
<Button
  compact={false}
  dense={false}
  disabled={false}
  raised={true}
  ripple={true}
  stroked={false}
  unelevated={false}
>
  <Ripple
    disabled={false}
    render={[Function]}
  >
    <button
      className="mdc-button mdc-ripple-upgraded mdc-button--raised"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "--mdc-ripple-fg-scale": "Infinity",
          "--mdc-ripple-fg-size": "0px",
          "--mdc-ripple-left": "0px",
          "--mdc-ripple-top": "0px",
        }
      }
    >
      Button
    </button>
  </Ripple>
</Button>
`;

exports[`Button Ripple Disabled 1`] = `
<Button
  compact={false}
  dense={false}
  disabled={false}
  raised={false}
  ripple={false}
  stroked={false}
  unelevated={false}
>
  <button
    className="mdc-button"
    disabled={false}
  >
    Button
  </button>
</Button>
`;

exports[`Button Stroked Button 1`] = `
<Button
  compact={false}
  dense={false}
  disabled={false}
  raised={false}
  ripple={true}
  stroked={true}
  unelevated={false}
>
  <Ripple
    disabled={false}
    render={[Function]}
  >
    <button
      className="mdc-button mdc-ripple-upgraded mdc-button--stroked"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "--mdc-ripple-fg-scale": "Infinity",
          "--mdc-ripple-fg-size": "0px",
          "--mdc-ripple-left": "0px",
          "--mdc-ripple-top": "0px",
        }
      }
    >
      Button
    </button>
  </Ripple>
</Button>
`;

exports[`Button Text Button 1`] = `
<Button
  compact={false}
  dense={false}
  disabled={false}
  raised={false}
  ripple={true}
  stroked={false}
  unelevated={false}
>
  <Ripple
    disabled={false}
    render={[Function]}
  >
    <button
      className="mdc-button mdc-ripple-upgraded"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "--mdc-ripple-fg-scale": "Infinity",
          "--mdc-ripple-fg-size": "0px",
          "--mdc-ripple-left": "0px",
          "--mdc-ripple-top": "0px",
        }
      }
    >
      Button
    </button>
  </Ripple>
</Button>
`;

exports[`Button Unelevated Button 1`] = `
<Button
  compact={false}
  dense={false}
  disabled={false}
  raised={false}
  ripple={true}
  stroked={false}
  unelevated={true}
>
  <Ripple
    disabled={false}
    render={[Function]}
  >
    <button
      className="mdc-button mdc-ripple-upgraded mdc-button--unelevated"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "--mdc-ripple-fg-scale": "Infinity",
          "--mdc-ripple-fg-size": "0px",
          "--mdc-ripple-left": "0px",
          "--mdc-ripple-top": "0px",
        }
      }
    >
      Button
    </button>
  </Ripple>
</Button>
`;
